# pgnumeric

./: .gitignore  LICENSE  README  autogen.sh  configure.ac
src/: Makefile.am  bool.h  float.c  numeric.c  numeric.h  pgstrcasecmp.c
test/: Makefile.am  run-test.sh  test_pgnumeric.c
